--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "gulp": "^3.6.0",
     "gulp-autoprefixer": "2.1.0",
+    "gulp-watch": "4.1.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.3",
     "gulp-minify-html": "0.1.8",
